--- a/index.html
+++ b/index.html
@@ -7,4 +7,13 @@
 		</div>
 	</div>
 </body>
-</html>
+</html>					</div>
+				</li>
+				<li>
+					<div>
+						<div>
+							<h2><a href="index.html">Healthy Food</a></h2>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh</p>
+							<a href="index.html" class="view">view all</a>
+						</div>
+						<a href="index.html"><img src="images/healthy-food.jpg" alt="Image" /></a>
